# WebsiteBuilder

./: CHANGELOG.md  Makefile  Pipfile  README.md  documentation.py  pyproject.toml  requirements.txt
.github/workflows/: build-website.yml
builder/: __init__.py
builder/templates/: __init__.py  default.py  load_default.py
sources/: index.md  internal.md
sources/resources/: style.css
