[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WebsiteBuilder"
version = "1.0.0"
authors = [
  { name="Gaëtan 'DocSkellington' Staquet", email="gaetan.staquet@gmail.com" },
]
description = "A simple template system to produce a static HTML website from Markdown files."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: File Formats :: JSON",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
  "markdown",
  "pygments",
  "markdown-katex",
  "md2html-links",
  "caption"
]

[project.urls]
"Homepage" = "https://github.com/DocSkellington/WebsiteBuilder"
"Bug Tracker" = "https://github.com/DocSkellington/WebsiteBuilder/issues"

[tool.hatch.build]
exclude = ["example.py"]